# mcp-sentinel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  ship.ps1
.github/workflows/: ci.yml
data/: known_servers.json
src/mcp_sentinel/: __main__.py  cli.py  config.py
src/mcp_sentinel/analyzers/: config_analyzer.py  dynamic.py  manifest.py  static.py
src/mcp_sentinel/connectors/: source.py  sse.py  stdio.py
src/mcp_sentinel/core/: context.py  engine.py  registry.py  types.py
src/mcp_sentinel/reporters/: console_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py  sarif_reporter.py
src/mcp_sentinel/rules/: __init__.py  _base.py
src/mcp_sentinel/rules/creation/: __init__.py  c001_namespace_typosquatting.py  c002_tool_name_conflict.py  c003_preference_manipulation.py  c004_tool_poisoning.py  c005_command_injection.py  c006_installer_integrity.py
src/mcp_sentinel/rules/deployment/: __init__.py  d001_credential_exposure.py  d002_sandbox_config.py  d003_source_trust.py
src/mcp_sentinel/utils/: ast_helpers.py  entropy.py  hash.py  owasp.py  similarity.py
tests/: conftest.py
tests/e2e/: test_self_scan.py
tests/fixtures/: test_mcp_server.py
tests/fixtures/clean_servers/: safe_server.py
tests/fixtures/vulnerable_servers/: command_injection_server.py  credential_exposure_server.py  preference_manipulation_server.py  privilege_persistence_config.json  prompt_injection_server.py  sandbox_escape_server.py  shadowing_server.py  source_trust_config.json  tool_chain_abuse_server.py  tool_conflict_server.py  tool_poisoning_server.py  typosquatting_server.py  unauthorized_access_server.py
tests/integration/: test_cli.py  test_reporters.py
tests/unit/: test_all_rules.py  test_types.py
(+15 files in other folders)
