[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sentinel"
version = "0.1.0"
description = "MCP Sentinel — scan, audit, and secure your MCP ecosystem"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "MCP Sentinel Contributors" },
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "httpx>=0.25",
    "jinja2>=3.1",
    "weasyprint>=60.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
mcp-sentinel = "mcp_sentinel.cli:app"
mcp-scan = "mcp_sentinel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.pytest.ini_options]
addopts = "--cov=mcp_sentinel --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_configs = false
warn_redundant_casts = false
warn_unused_ignores = false
disable_error_code = ["attr-defined", "union-attr", "assignment", "return-value", "name-defined", "dict-item"]
